// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ElementViewPrinter > computedAmazonView 1`] = `
"digraph {
  bgcolor = "transparent";
  layout = "dot";
  compound = true;
  rankdir = "TB";
  TBbalance = "min";
  splines = "spline";
  outputorder = "nodesfirst";
  nodesep = 1.389;
  ranksep = 1.528;
  pack = 100;
  packmode = "array_3";
  pad = 0.209;
  forcelabels = true;
  fontname = "Arial";
  graph [
    fontsize = 15;
    labeljust = "l";
    labelloc = "t";
    margin = 50.1;
  ];
  edge [
    nojustify = true;
    arrowsize = 0.75;
    fontname = "Arial";
    fontsize = 14;
    penwidth = 2;
    color = "#6E6E6E";
    fontcolor = "#C6C6C6";
  ];
  node [
    fontname = "Arial";
    nojustify = true;
    shape = "rect";
    width = 4.445;
    height = 2.5;
    style = "filled";
    penwidth = 0;
  ];
  subgraph "cluster_cloud" {
    likec4_id = "cloud";
    likec4_level = 0;
    likec4_depth = 1;
    fillcolor = "#194b9e";
    color = "#1b3d88";
    style = "filled";
    margin = 32;
    label = <<FONT POINT-SIZE="11" COLOR="#bfdbfeb3"><B>CLOUD</B></FONT>>;
    "backend" [
      likec4_id = "cloud.backend";
      likec4_level = 1;
      fillcolor = "#3b82f6";
      fontcolor = "#eff6ff";
      color = "#2563eb";
      margin = "0.362,0.362";
      label = <<FONT POINT-SIZE="19">Backend</FONT>>;
    ];
  }
  subgraph "cluster_amazon" {
    likec4_id = "amazon";
    likec4_level = 0;
    likec4_depth = 1;
    fillcolor = "#194b9e";
    color = "#1b3d88";
    style = "filled";
    margin = 32;
    label = <<FONT POINT-SIZE="11" COLOR="#bfdbfeb3"><B>AMAZON</B></FONT>>;
    "s3" [
      likec4_id = "amazon.s3";
      likec4_level = 1;
      fillcolor = "#3b82f6";
      fontcolor = "#eff6ff";
      color = "#2563eb";
      margin = "0.362,0.362";
      label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="6"><TR><TD><FONT POINT-SIZE="19">S3</FONT></TD></TR><TR><TD><FONT POINT-SIZE="14" COLOR="#bfdbfe">S3 is a storage service</FONT></TD></TR></TABLE>>;
    ];
  }
  "backend" -> "s3" [
    likec4_id = "cloud.backend:amazon.s3";
    style = "dashed";
    weight = 1;
    label = <<TABLE BORDER="0" CELLPADDING="3" CELLSPACING="0" BGCOLOR="#18191bA0"><TR><TD ALIGN="TEXT" BALIGN="LEFT"><FONT POINT-SIZE="14">persists artifacts</FONT></TD></TR></TABLE>>;
    arrowhead = "normal";
    arrowtail = "odiamond";
    dir = "both";
    minlen = 0;
  ];
}"
`;

exports[`ElementViewPrinter > computedCloud3levels 1`] = `
"digraph {
  bgcolor = "transparent";
  layout = "dot";
  compound = true;
  rankdir = "TB";
  TBbalance = "min";
  splines = "spline";
  outputorder = "nodesfirst";
  nodesep = 1.389;
  ranksep = 1.528;
  pack = 100;
  packmode = "array_3";
  pad = 0.209;
  forcelabels = true;
  fontname = "Arial";
  graph [
    fontsize = 15;
    labeljust = "l";
    labelloc = "t";
    margin = 50.1;
  ];
  edge [
    nojustify = true;
    arrowsize = 0.75;
    fontname = "Arial";
    fontsize = 14;
    penwidth = 2;
    color = "#6E6E6E";
    fontcolor = "#C6C6C6";
  ];
  node [
    fontname = "Arial";
    nojustify = true;
    shape = "rect";
    width = 4.445;
    height = 2.5;
    style = "filled";
    penwidth = 0;
  ];
  "support" [
    likec4_id = "support";
    likec4_level = 0;
    fillcolor = "#3b82f6";
    fontcolor = "#eff6ff";
    color = "#2563eb";
    margin = "0.362,0.362";
    label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="6"><TR><TD><FONT POINT-SIZE="19">Support Engineer</FONT></TD></TR><TR><TD><FONT POINT-SIZE="14" COLOR="#bfdbfe">Support engineers are responsible for<BR/>supporting customers</FONT></TD></TR></TABLE>>;
  ];
  "customer" [
    likec4_id = "customer";
    likec4_level = 0;
    fillcolor = "#3b82f6";
    fontcolor = "#eff6ff";
    color = "#2563eb";
    margin = "0.362,0.362";
    label = <<FONT POINT-SIZE="19">customer</FONT>>;
  ];
  "amazon" [
    likec4_id = "amazon";
    likec4_level = 0;
    fillcolor = "#3b82f6";
    fontcolor = "#eff6ff";
    color = "#2563eb";
    margin = "0.362,0.362";
    label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="6"><TR><TD><FONT POINT-SIZE="19">Amazon</FONT></TD></TR><TR><TD><FONT POINT-SIZE="14" COLOR="#bfdbfe">Amazon is a cloud provider</FONT></TD></TR></TABLE>>;
  ];
  subgraph "cluster_cloud" {
    likec4_id = "cloud";
    likec4_level = 0;
    likec4_depth = 2;
    fillcolor = "#1a468d";
    color = "#1c3979";
    style = "filled";
    margin = 32;
    label = <<FONT POINT-SIZE="11" COLOR="#bfdbfeb3"><B>CLOUD</B></FONT>>;
    "adminpanel" [
      likec4_id = "cloud.frontend.adminPanel";
      likec4_level = 1;
      fillcolor = "#3b82f6";
      fontcolor = "#eff6ff";
      color = "#2563eb";
      margin = "0.362,0.362";
      label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="6"><TR><TD><FONT POINT-SIZE="19">Admin Panel Webapp</FONT></TD></TR><TR><TD><FONT POINT-SIZE="14" COLOR="#bfdbfe">The admin panel is a webapp that allows<BR/>support staff to manage customer data.</FONT></TD></TR></TABLE>>;
      group = "cloud";
    ];
    "dashboard" [
      likec4_id = "cloud.frontend.dashboard";
      likec4_level = 1;
      fillcolor = "#3b82f6";
      fontcolor = "#eff6ff";
      color = "#2563eb";
      margin = "0.362,0.362";
      label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="6"><TR><TD><FONT POINT-SIZE="19">Customer Dashboard Webapp</FONT></TD></TR><TR><TD><FONT POINT-SIZE="14" COLOR="#bfdbfe">The customer dashboard is a webapp that<BR/>allows customers to view their data.</FONT></TD></TR></TABLE>>;
      group = "cloud";
    ];
    subgraph "cluster_backend" {
      likec4_id = "cloud.backend";
      likec4_level = 1;
      likec4_depth = 1;
      fillcolor = "#194b9e";
      color = "#1b3d88";
      style = "filled";
      margin = 32;
      label = <<FONT POINT-SIZE="11" COLOR="#bfdbfeb3"><B>BACKEND</B></FONT>>;
      "graphql" [
        likec4_id = "cloud.backend.graphql";
        likec4_level = 2;
        fillcolor = "#3b82f6";
        fontcolor = "#eff6ff";
        color = "#2563eb";
        margin = "0.362,0.362";
        label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="6"><TR><TD><FONT POINT-SIZE="19">Graphql API</FONT></TD></TR><TR><TD><FONT POINT-SIZE="14" COLOR="#bfdbfe">Component that allows to query data via<BR/>GraphQL.</FONT></TD></TR></TABLE>>;
        group = "cloud";
      ];
      "storage" [
        likec4_id = "cloud.backend.storage";
        likec4_level = 2;
        fillcolor = "#3b82f6";
        fontcolor = "#eff6ff";
        color = "#2563eb";
        margin = "0.362,0";
        penwidth = 2;
        shape = "cylinder";
        label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="6"><TR><TD><FONT POINT-SIZE="19">Backend Storage</FONT></TD></TR><TR><TD><FONT POINT-SIZE="14" COLOR="#bfdbfe">The backend storage is a component that<BR/>stores data.</FONT></TD></TR></TABLE>>;
        group = "cloud";
      ];
      "graphql" -> "storage" [
        likec4_id = "cloud.backend.graphql:cloud.backend.storage";
        style = "dashed";
        weight = 4;
        minlen = 0;
      ];
    }
    "adminpanel" -> "graphql" [
      likec4_id = "cloud.frontend.adminPanel:cloud.backend.graphql";
      style = "dashed";
      weight = 4;
      label = <<TABLE BORDER="0" CELLPADDING="3" CELLSPACING="0" BGCOLOR="#18191bA0"><TR><TD ALIGN="TEXT" BALIGN="LEFT"><FONT POINT-SIZE="14">fetches data in zero trust network<BR/>with sso authentification</FONT></TD></TR></TABLE>>;
    ];
    "dashboard" -> "graphql" [
      likec4_id = "cloud.frontend.dashboard:cloud.backend.graphql";
      style = "dashed";
      weight = 4;
      label = <<TABLE BORDER="0" CELLPADDING="3" CELLSPACING="0" BGCOLOR="#18191bA0"><TR><TD ALIGN="TEXT" BALIGN="LEFT"><FONT POINT-SIZE="14">fetches data</FONT></TD></TR></TABLE>>;
    ];
  }
  "support" -> "adminpanel" [
    likec4_id = "support:cloud.frontend.adminPanel";
    style = "dashed";
    weight = 2;
    label = <<TABLE BORDER="0" CELLPADDING="3" CELLSPACING="0" BGCOLOR="#18191bA0"><TR><TD ALIGN="TEXT" BALIGN="LEFT"><FONT POINT-SIZE="14">manages</FONT></TD></TR></TABLE>>;
  ];
  "customer" -> "dashboard" [
    likec4_id = "customer:cloud.frontend.dashboard";
    style = "dashed";
    weight = 2;
    label = <<TABLE BORDER="0" CELLPADDING="3" CELLSPACING="0" BGCOLOR="#18191bA0"><TR><TD ALIGN="TEXT" BALIGN="LEFT"><FONT POINT-SIZE="14">opens in browser</FONT></TD></TR></TABLE>>;
  ];
  "storage" -> "amazon" [
    likec4_id = "cloud.backend.storage:amazon";
    style = "dashed";
    weight = 2;
    label = <<TABLE BORDER="0" CELLPADDING="3" CELLSPACING="0" BGCOLOR="#18191bA0"><TR><TD ALIGN="TEXT" BALIGN="LEFT"><FONT POINT-SIZE="14">persists artifacts</FONT></TD></TR></TABLE>>;
    arrowhead = "normal";
    arrowtail = "odiamond";
    dir = "both";
    minlen = 0;
  ];
}"
`;

exports[`ElementViewPrinter > computedCloudView 1`] = `
"digraph {
  bgcolor = "transparent";
  layout = "dot";
  compound = true;
  rankdir = "TB";
  TBbalance = "min";
  splines = "spline";
  outputorder = "nodesfirst";
  nodesep = 1.389;
  ranksep = 1.528;
  pack = 100;
  packmode = "array_3";
  pad = 0.209;
  forcelabels = true;
  fontname = "Arial";
  graph [
    fontsize = 15;
    labeljust = "l";
    labelloc = "t";
    margin = 50.1;
  ];
  edge [
    nojustify = true;
    arrowsize = 0.75;
    fontname = "Arial";
    fontsize = 14;
    penwidth = 2;
    color = "#6E6E6E";
    fontcolor = "#C6C6C6";
  ];
  node [
    fontname = "Arial";
    nojustify = true;
    shape = "rect";
    width = 4.445;
    height = 2.5;
    style = "filled";
    penwidth = 0;
  ];
  "customer" [
    likec4_id = "customer";
    likec4_level = 0;
    fillcolor = "#3b82f6";
    fontcolor = "#eff6ff";
    color = "#2563eb";
    margin = "0.362,0.362";
    label = <<FONT POINT-SIZE="19">customer</FONT>>;
  ];
  "support" [
    likec4_id = "support";
    likec4_level = 0;
    fillcolor = "#3b82f6";
    fontcolor = "#eff6ff";
    color = "#2563eb";
    margin = "0.362,0.362";
    label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="6"><TR><TD><FONT POINT-SIZE="19">Support Engineer</FONT></TD></TR><TR><TD><FONT POINT-SIZE="14" COLOR="#bfdbfe">Support engineers are responsible for<BR/>supporting customers</FONT></TD></TR></TABLE>>;
  ];
  "amazon" [
    likec4_id = "amazon";
    likec4_level = 0;
    fillcolor = "#3b82f6";
    fontcolor = "#eff6ff";
    color = "#2563eb";
    margin = "0.362,0.362";
    label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="6"><TR><TD><FONT POINT-SIZE="19">Amazon</FONT></TD></TR><TR><TD><FONT POINT-SIZE="14" COLOR="#bfdbfe">Amazon is a cloud provider</FONT></TD></TR></TABLE>>;
  ];
  subgraph "cluster_cloud" {
    likec4_id = "cloud";
    likec4_level = 0;
    likec4_depth = 1;
    fillcolor = "#194b9e";
    color = "#1b3d88";
    style = "filled";
    margin = 32;
    label = <<FONT POINT-SIZE="11" COLOR="#bfdbfeb3"><B>CLOUD</B></FONT>>;
    "frontend" [
      likec4_id = "cloud.frontend";
      likec4_level = 1;
      fillcolor = "#3b82f6";
      fontcolor = "#eff6ff";
      color = "#2563eb";
      margin = "0.417,0.445";
      label = <<FONT POINT-SIZE="19">Frontend</FONT>>;
    ];
    "backend" [
      likec4_id = "cloud.backend";
      likec4_level = 1;
      fillcolor = "#3b82f6";
      fontcolor = "#eff6ff";
      color = "#2563eb";
      margin = "0.362,0.362";
      label = <<FONT POINT-SIZE="19">Backend</FONT>>;
    ];
    "frontend" -> "backend" [
      likec4_id = "cloud.frontend:cloud.backend";
      style = "dashed";
      weight = 4;
      label = <<TABLE BORDER="0" CELLPADDING="3" CELLSPACING="0" BGCOLOR="#18191bA0"><TR><TD ALIGN="TEXT" BALIGN="LEFT"><FONT POINT-SIZE="14"><B>[...]</B></FONT></TD></TR></TABLE>>;
      minlen = 0;
    ];
  }
  "customer" -> "frontend" [
    likec4_id = "customer:cloud.frontend";
    style = "dashed";
    weight = 3;
    label = <<TABLE BORDER="0" CELLPADDING="3" CELLSPACING="0" BGCOLOR="#18191bA0"><TR><TD ALIGN="TEXT" BALIGN="LEFT"><FONT POINT-SIZE="14">opens in browser</FONT></TD></TR></TABLE>>;
  ];
  "support" -> "frontend" [
    likec4_id = "support:cloud.frontend";
    style = "dashed";
    weight = 3;
    label = <<TABLE BORDER="0" CELLPADDING="3" CELLSPACING="0" BGCOLOR="#18191bA0"><TR><TD ALIGN="TEXT" BALIGN="LEFT"><FONT POINT-SIZE="14">manages</FONT></TD></TR></TABLE>>;
  ];
  "backend" -> "amazon" [
    likec4_id = "cloud.backend:amazon";
    style = "dashed";
    weight = 2;
    label = <<TABLE BORDER="0" CELLPADDING="3" CELLSPACING="0" BGCOLOR="#18191bA0"><TR><TD ALIGN="TEXT" BALIGN="LEFT"><FONT POINT-SIZE="14">persists artifacts</FONT></TD></TR></TABLE>>;
    arrowhead = "normal";
    arrowtail = "odiamond";
    dir = "both";
    minlen = 0;
  ];
}"
`;

exports[`ElementViewPrinter > computedIndexView 1`] = `
"digraph {
  bgcolor = "transparent";
  layout = "dot";
  compound = true;
  rankdir = "TB";
  TBbalance = "min";
  splines = "spline";
  outputorder = "nodesfirst";
  nodesep = 1.389;
  ranksep = 1.528;
  pack = 100;
  packmode = "array_3";
  pad = 0.209;
  forcelabels = true;
  fontname = "Arial";
  graph [
    fontsize = 15;
    labeljust = "l";
    labelloc = "t";
    margin = 50.1;
  ];
  edge [
    nojustify = true;
    arrowsize = 0.75;
    fontname = "Arial";
    fontsize = 14;
    penwidth = 2;
    color = "#6E6E6E";
    fontcolor = "#C6C6C6";
  ];
  node [
    fontname = "Arial";
    nojustify = true;
    shape = "rect";
    width = 4.445;
    height = 2.5;
    style = "filled";
    penwidth = 0;
  ];
  "customer" [
    likec4_id = "customer";
    likec4_level = 0;
    fillcolor = "#3b82f6";
    fontcolor = "#eff6ff";
    color = "#2563eb";
    margin = "0.362,0.362";
    label = <<FONT POINT-SIZE="19">customer</FONT>>;
  ];
  "support" [
    likec4_id = "support";
    likec4_level = 0;
    fillcolor = "#3b82f6";
    fontcolor = "#eff6ff";
    color = "#2563eb";
    margin = "0.362,0.362";
    label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="6"><TR><TD><FONT POINT-SIZE="19">Support Engineer</FONT></TD></TR><TR><TD><FONT POINT-SIZE="14" COLOR="#bfdbfe">Support engineers are responsible for<BR/>supporting customers</FONT></TD></TR></TABLE>>;
  ];
  "cloud" [
    likec4_id = "cloud";
    likec4_level = 0;
    fillcolor = "#3b82f6";
    fontcolor = "#eff6ff";
    color = "#2563eb";
    margin = "0.362,0.362";
    label = <<FONT POINT-SIZE="19">cloud</FONT>>;
  ];
  "amazon" [
    likec4_id = "amazon";
    likec4_level = 0;
    fillcolor = "#3b82f6";
    fontcolor = "#eff6ff";
    color = "#2563eb";
    margin = "0.362,0.362";
    label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="6"><TR><TD><FONT POINT-SIZE="19">Amazon</FONT></TD></TR><TR><TD><FONT POINT-SIZE="14" COLOR="#bfdbfe">Amazon is a cloud provider</FONT></TD></TR></TABLE>>;
  ];
  "customer" -> "cloud" [
    likec4_id = "customer:cloud";
    style = "dashed";
    weight = 3;
    label = <<TABLE BORDER="0" CELLPADDING="3" CELLSPACING="0" BGCOLOR="#18191bA0"><TR><TD ALIGN="TEXT" BALIGN="LEFT"><FONT POINT-SIZE="14">opens in browser</FONT></TD></TR></TABLE>>;
  ];
  "support" -> "cloud" [
    likec4_id = "support:cloud";
    style = "dashed";
    weight = 3;
    label = <<TABLE BORDER="0" CELLPADDING="3" CELLSPACING="0" BGCOLOR="#18191bA0"><TR><TD ALIGN="TEXT" BALIGN="LEFT"><FONT POINT-SIZE="14">manages</FONT></TD></TR></TABLE>>;
  ];
  "cloud" -> "amazon" [
    likec4_id = "cloud:amazon";
    style = "dashed";
    weight = 3;
    label = <<TABLE BORDER="0" CELLPADDING="3" CELLSPACING="0" BGCOLOR="#18191bA0"><TR><TD ALIGN="TEXT" BALIGN="LEFT"><FONT POINT-SIZE="14">persists artifacts</FONT></TD></TR></TABLE>>;
    arrowhead = "normal";
    arrowtail = "odiamond";
    dir = "both";
    minlen = 0;
  ];
}"
`;
